--- a/OsEngine/OsEngine.csproj
+++ b/OsEngine/OsEngine.csproj
@@ -799,6 +799,8 @@
     <Compile Include="Market\Services\RestChannel.cs" />
     <Compile Include="Market\Services\WsSource.cs" />
     <Compile Include="MyEntity\Direction.cs" />
+    <Compile Include="MyEntity\Emitent.cs" />
+    <Compile Include="MyEntity\ExChenge.cs" />
     <Compile Include="MyEntity\StepType.cs" />
     <Compile Include="OsConverter\OsCandleConverterUi.xaml.cs">
       <DependentUpon>OsCandleConverterUi.xaml</DependentUpon>
@@ -1047,8 +1049,12 @@
     <Compile Include="RobotWindow.xaml.cs">
       <DependentUpon>RobotWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ChangeEmitentVM.cs" />
     <Compile Include="ViewModels\MyRobotVM.cs" />
     <Compile Include="ViewModels\RobotWindowVM.cs" />
+    <Compile Include="Views\ChangeEmitentWindow.xaml.cs">
+      <DependentUpon>ChangeEmitentWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DecimalTextBox.cs" />
     <Compile Include="Views\IntTextBox.cs" />
     <Compile Include="Views\MyDecimalTextBox.cs" />
@@ -1572,6 +1578,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RobotWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ChangeEmitentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
